--- a/NP_Config/MainWindow.xaml
+++ b/NP_Config/MainWindow.xaml
@@ -69,12 +69,25 @@
                     <Grid Grid.Row="2" Style="{DynamicResource GridStyle_Type2}" Margin="0,1,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition Width="200"></ColumnDefinition>
+                            <ColumnDefinition Width="200"></ColumnDefinition>
+                            <ColumnDefinition Width="200"></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Grid Grid.Column="0">
                             <Button x:Name="Chenging_Theme" Content="Тёмная тема" Height="20" Margin="5,0,2,0" Style="{DynamicResource ButtonStyle_Type2}" Click="Chenging_Theme_Click"/>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <TextBlock x:Name="All_NP_txt" Text="Добавлено модулей NP: 0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                        </Grid>
+                        <Grid Grid.Column="2">
+                            <TextBlock x:Name="All_ZR_txt" Text="Добавлено датчиков: 0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                        </Grid>
+                        <Grid Grid.Column="3">
+                            <TextBlock x:Name="All_UCH_txt" Text="Добавлено участков: 0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                        </Grid>
+                        <Grid Grid.Column="4">
+                            <TextBlock Text="NP Config v2.1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,30,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
                         </Grid>
                     </Grid>
                 </Grid>
