--- a/NP_Config/MainWindow.xaml
+++ b/NP_Config/MainWindow.xaml
@@ -47,10 +47,10 @@
                             <Button x:Name="Open_button" Content="Открыть" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}" Click="Open_button_Click"/>
                         </Grid>
                         <Grid Grid.Column="2">
-                            <Button x:Name="Save_Button" Content="Сохранить" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                            <Button x:Name="Save_Button" Content="Сохранить" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}" Click="Save_Button_Click"/>
                         </Grid>
                         <Grid Grid.Column="3">
-                            <Button x:Name="Save_all_button" Content="Сохранить всё" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                            <Button x:Name="Save_all_button" Content="Сохранить всё" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}" Click="Save_all_button_Click"/>
                         </Grid>
                         <Grid Grid.Column="4">
                             <Button x:Name="Clear_page_Button" Content="Очистить страницу" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}" Click="Clear_page_Button_Click"/>
@@ -87,7 +87,7 @@
                             <TextBlock x:Name="All_UCH_txt" Text="Добавлено участков: 0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
                         </Grid>
                         <Grid Grid.Column="4">
-                            <TextBlock Text="NP Config v2.10" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,30,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            <TextBlock Text="NP Config v2.11" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,30,0" Style="{DynamicResource TextBlockStyle_Type1}"/>
                         </Grid>
                     </Grid>
                 </Grid>
